disabled overflow on body (fixes #2)

--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,7 @@ html, body {
 	position: relative;
 	padding: 0;
 	margin: 0;
-	overflow-x: hidden;
-	overflow-y: auto;
+	overflow: hidden;
 	
 	font-family: 'Lato', Times, 'Times New Roman', serif;
 	font-size: 36px;
